[package]
name = "rust-gfx-examples"
version = "0.1.0"
authors = ["David Tulig <david.tulig@gmail.com>"]
license = "MIT"

[dependencies]
gfx = "0.17"
glutin = "0.12"
gfx_window_glutin = "0.20"
time = "0.1"
cgmath = "0.14"

[dependencies.image]
version = "0.22"
default-features = false
features = ["png_codec"]

[[example]]
name = "tutorial01"
path = "examples/tutorial01/main.rs"

[[example]]
name = "tutorial02"
path = "examples/tutorial02/main.rs"

[[example]]
name = "tutorial03"
path = "examples/tutorial03/main.rs"

[[example]]
name = "tutorial04"
path = "examples/tutorial04/main.rs"

[[example]]
name = "tutorial05"
path = "examples/tutorial05/main.rs"
